<package format="3">
  <name>perception</name>
  <version>0.0.1</version>
  <description>Perception nodes for RoboSoccer</description>
  <maintainer email="uwrobosoccer@gmail.com">UWRS</maintainer>
  <license>MIT</license>
  <export>
    <build_type>ament_python</build_type>
  </export>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>adafruit-circuitpython-bno085x</exec_depend>
  <exec_depend>adafruit-extended-bus</exec_depend>
  <exec_depend>RPi.GPIO</exec_depend>
</package>
